[project]
name = "merkle-tree"
version = "0.1.0"
description = "Merkle tree and hash chain utilities for immutable audit logs"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "daniel-wallace-personal", email = "wallace.danielk@gmail.com" }
]
keywords = ["merkle", "hash-chain", "audit-log", "integrity", "cryptography"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/lokryn-llc/merkle-tree"
Repository = "https://github.com/lokryn-llc/merkle-tree"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/merkle_tree"]


[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8",
]